better POST apidoc for experiments
and some other changes and fixes
